--- a/JobsBaseCustomizeUIKitDemoProj/Podfile
+++ b/JobsBaseCustomizeUIKitDemoProj/Podfile
@@ -19,7 +19,7 @@ use_frameworks!
 def func
   pod 'JobsGlobleDef'
   pod 'DoraemonKit' # https://github.com/didi/DoraemonKit 滴滴打车出的工具
-  pod 'FBRetainCycleDetector' # https://github.com/facebook/FBRetainCycleDetector
+#  pod 'FBRetainCycleDetector' # https://github.com/facebook/FBRetainCycleDetector
   pod 'Masonry'
   pod 'AFNetworking'
   pod 'HXPhotoPicker' # 相册选择 https://github.com/SilenceLove/HXPhotoPicker
